# sparkles

./: .bumpversion.cfg  .bumpversion.toml  .coveragerc  .gitignore  LICENSE  README.md  patch.py  pyproject.toml  release.sh  sparkles.py
.github/workflows/: bump-version.yml  publish.yml  release.yml  test.yml
sparkles/: __init__.py  config.py  data_utils.py  fast_gsheet.py  file_utils.py  google_sheet.py  gsheet_compare.py  mongo_tools.py  parsing.py  pathing.py  root_path_worker.py  xlrd_gsheet_reader.py
tests/: test_counter.py  test_google_sheet.py  test_logged_user.py  test_lookup.py  test_mongo_tools.py  test_pairwise.py  test_parse_csl.py  test_parse_values.py  test_sorted_groupby.py  test_to_dicts.py
