[build-system]
requires = [
    "flit_core >=2,<4",
]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "sparkles"
author = "James Vogel"
author-email = "jim.m.vogel@gmail.com"
home-page = "https://github.com/voglster/sparkles"
requires = [
    "pytz",
    "loguru",
    "requests",
    "notifiers",
    "python-dotenv",
    "gspread",
    "oauth2client",
    "starlette",
    "uvicorn",
    "xlrd==1.2.0"
]
requires-python=">=3.5"
description-file="README.md"
classifiers = ["License :: OSI Approved :: MIT License"]


[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pytest-watch",
    "tomlkit",
    "black",
]
