[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparkles"
version = "0.2.1"
description = "Just utilities made by Jim Vogel"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "James Vogel", email = "jim.m.vogel@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pytz>=2024.1",
    "loguru>=0.7.2",
    "requests>=2.32.3",
    "notifiers>=1.3.3",
    "python-dotenv>=1.0.1",
    "gspread>=6.1.4",
    "google-auth>=2.34.0",
    "google-auth-oauthlib>=1.2.1",
    "starlette>=0.41.3",
    "uvicorn>=0.32.1",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-watch>=4.2.0",
    "ruff>=0.8.4",
]

[project.urls]
Homepage = "https://github.com/voglster/sparkles"
Repository = "https://github.com/voglster/sparkles"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
